--- a/templates/form.html
+++ b/templates/form.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBTA finder</title>
+    <title>ARAM live game data</title>
 </head>
 
 <body>
     <form action="/" method="POST">
         <label for="">riot_id: <input type="text" name="riot_id"></label>
-        <button>Find synergies and winrates</button>
+        <button>input your summoner name to find ARAM info.</button>
     </form>
