--- a/templates/form.html
+++ b/templates/form.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="/" method="POST">
+    <form action="/" method="post">
         <label for="">riot_id: <input type="text" name="riot_id"></label>
         <button>input your summoner name to find ARAM info.</button>
     </form>
