--- a/templates/result.html
+++ b/templates/result.html
@@ -12,10 +12,10 @@
     <p> your champ synergizes with your teamates are below. </p>
         <h1>synergies</h1>
     <p>
-        your teamates are {{ team_1_players }} and the opponents are {{ team_2_players }}.
+        your teamates are {{ 1_players }} and the opponents are {{ 2_players }}.
     </p>
   <p>
-      your teams champs are {{ team_1_champs }} and the opponents champs are {{team_2_champs}}.
+      your teams champs are {{ 1_champs }} and the opponents champs are {{2_champs}}.
   </p>
 
   <p>
