--- a/templates/form.html
+++ b/templates/form.html
@@ -12,4 +12,7 @@
     <form action="/" method="post">
         <label for="">riot_id: <input type="text" name="riot_id"></label>
         <button>input your summoner name to find ARAM info.</button>
+        <p>
+            {{error}}
+        </p>
     </form>
