--- a/templates/result.html
+++ b/templates/result.html
@@ -12,14 +12,14 @@
     <p> your champ synergizes with your teamates are below. </p>
         <h1>synergies</h1>
     <p>
-        your teamates are {{ 1_players }} and the opponents are {{ 2_players }}.
+        your teamates are {{ team_1_players }} and the opponents are {{ team_2_players }}.
     </p>
   <p>
-      your teams champs are {{ 1_champs }} and the opponents champs are {{2_champs}}.
+      your teams champs and winrates  are {{ team_1_champs }} and the opponents champs and winrates are {{team_2_champs}}.
   </p>
 
   <p>
-      you are playing {{ gameMode }}.
+      you are playing {{ gamemode }}.
   </p>
 <!-- <div class="grid">
     <div class="bar" style="--bar-value:85%;" data-name="Your Blog" title="Your Blog 85%"></div>
